V0.0.9 (2017-xx-xx):
====================

* New features:
  * Added parsing support for kernel IP layer martian package messages

V0.0.8 (2017-05-30):
====================

* New features:
  * Base64StringModelElement for parsing of base64 strings
  * DecimalFloatValueModelElement for parsing of floats
  * AnalysisChild full asynchronous remote control connection
    handling
  * MissingMatchPathValueDetector realerting support added
  * StringRegexMatchRule for matching parsed data using regex
  * EnhancedNewMatchPathValueComboDetector added for more complex
    value combination detection providing transformation, annotation,
    features ...
* Changes:
  * Various bugfixes
  * Code cleanup using pylint

V0.0.7 (2017-01-09):
====================

* New features:
  * Datetime parsing reimplemented in DateTimeModelElement to
    fix various shortcomings of strptime in Python and libc.
  * ElementValueBranchModelElement added to support conditional
    branching.
  * DebugHistoryMatchRule added: keep history of matched LogAtoms.
  * Unix socket input support: improved logdata reading now also
    supporting connects to UNIX server sockets for reading.
* Changes:
  * Restructured AMinerUtils and utils package.


V0.0.6 (2016-11-04):
====================

* New features:
  * Added "LogAtom" and "AtomHandlerInterface" to pass data from
    IO-layer to upper layers consistently.
  * Added TimestampsUnsortedDetector.py to fail (exit) when data
    is not properly sorted.
  * Added SimpleMultisourceAtomSync.py to merge LogAtoms read
    from parallel streams, e.g. from multiple logfiles.
* Bugfixes:
  * Logic flaw in logfile rollover handling, selecting on bad fd.
  * Unassigned, reused variable caused same logfile to be opened
    more than once.

V0.0.5 (2016-10-11):
====================

* New features:
  * Added helper class for parser matching process debugging.
  * Added interface to ease detector state updates after triggering
    an event.